# Matsuri

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  THIRDPARTY
.github/workflows/: cmake-linux-windows.yml  cmake-multi-platform.yml
documentation/: linux.html  samples.txt  style.css  wasm.html  web-audio.html  windows.html
resources/: distribution.sh  exponential-volume-easing.c  matsuri-606.sfz  matsuri-v2-606.sfz  metrics.cpp  toolchain-mingw64.cmake
source/: generate-wavs.c  matsuri-library.c  matsuri-library.h  misc.c  misc.h  version.h  voice-allocator.c  voice-allocator.h
source/clap/: plugin.c
source/lv2/: manifest.ttl  matsuri.ttl  plugin.c
source/research/: CMakeLists.txt  canvas-test.cpp  canvas.cpp  canvas.hpp  error.cpp  error.hpp  metrics-test.cpp  metrics.inc  misc.cpp  misc.hpp  shared.cpp  shared.hpp  test-canvas.cpp  test-metrics.cpp  test-ui.cpp  texgyreheros-bold.inc  texgyreheros-regular.inc  ui-test.cpp  ui.cpp  ui.hpp
source/wasm/: plugin-worklet.js  plugin.c  plugin.js  test-page.html
